# pychanio

./: Makefile  README.md  pyproject.toml
docs/: 0_GettingStarted.md  2_FIRST_PROGRAM.md  3_CHANNEL_TYPES_AND_INTERFACES.md  4_UNBUFFERED_AND_BUFFERED_CHANNELS.md  5_GOROUTINES_WITH_PYTHON.md  6_SELECT_BLOCKS.md  7_SENTINELS.md  8_BLOCKING_AND_NON_BLOCKING.md  9_CONCURRENCY_PATTERNS.md  A_CHANNEL_FAIRNESS_AND_GUARANTEES.md  B_DESIGN_PHILOSOPHY.md  SUMMARY.md
examples/: main.py
src/pychan/: __init__.py  core.py  exceptions.py  select.py
tests/: test_channels.py  test_select.py  test_sentinel.py
