[project]
name = "pychan"
version = "0.1.0"
description = "Go-style channels and select blocks for asyncio in Python."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pychan = "pychan:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
   "pytest>=8.4.1",
   "pytest-asyncio>=1.1.0",
   "ruff",
]
